--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
