Feat: add get data from DB

--- a/app/.env
+++ b/app/.env
@@ -1,7 +1,14 @@
 TOKEN = ""
-X_TOKEN = "fake-super-secret-token"
+X_TOKEN = ""
 
 
-API_GRANT_TYPE = "client_credentials"
+API_GRANT_TYPE = ""
 API_CLIENT_ID = ""
 API_CLIENT_SECRET = ""
+
+
+DB_NAME = ''
+DB_HOST_PORT = ''
+DB_USER = ''
+DB_PASSWORD = ''
+DB_AUTH_SOURCE = ''
