--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.8.0
+pymongo==4.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
