--- a/app/.env
+++ b/app/.env
@@ -14,3 +14,10 @@ DB_HOST_PORT = ''
 DB_USER = ''
 DB_PASSWORD = ''
 DB_AUTH_SOURCE = ''
+
+
+HISTORY_DB_NAME = ''
+HISTORY_DB_HOST_PORT = ''
+HISTORY_DB_USER = ''
+HISTORY_DB_PASSWORD = ''
+HISTORY_DB_AUTH_SOURCE = ''
