--- a/requirements_uv.txt
+++ b/requirements_uv.txt
@@ -5,7 +5,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
-email_validator==2.2.0
+email-validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.111.1
 fastapi-cli==0.0.4
@@ -14,24 +14,24 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
-Jinja2==3.1.4
+jinja2==3.1.4
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+markupsafe==2.1.5
 mdurl==0.1.2
 numpy==2.0.1
 pandas==2.2.2
 passlib==1.7.4
 pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-PyJWT==2.8.0
+pydantic-core==2.20.1
+pygments==2.18.0
+pyjwt==2.8.0
 pymongo==4.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
-PyYAML==6.0.1
+pyyaml==6.0.1
 requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
@@ -39,7 +39,7 @@ six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 typer==0.12.3
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.3
