chore: create config.py

--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,3 @@
-TOKEN = ""
-X_TOKEN = ""
 AIOT_username = ""
 AIOT_password = ""
 
@@ -9,15 +7,19 @@ API_CLIENT_ID = ""
 API_CLIENT_SECRET = ""
 
 
-DB_NAME = ''
-DB_HOST_PORT = ''
-DB_USER = ''
-DB_PASSWORD = ''
-DB_AUTH_SOURCE = ''
+DB_NAME = ""
+DB_HOST_PORT = ""
+DB_USER = ""
+DB_PASSWORD = ""
+DB_AUTH_SOURCE = ""
 
 
-HISTORY_DB_NAME = ''
-HISTORY_DB_HOST_PORT = ''
-HISTORY_DB_USER = ''
-HISTORY_DB_PASSWORD = ''
-HISTORY_DB_AUTH_SOURCE = ''
+HISTORY_DB_NAME = ""
+HISTORY_DB_HOST_PORT = ""
+HISTORY_DB_USER = ""
+HISTORY_DB_PASSWORD = ""
+HISTORY_DB_AUTH_SOURCE = ""
+
+
+ALGORITHM = ""
+SECRET_KEY = ""
